--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .DS_store
 cuanti_secund_Canasta_Basica_TIC_2023/
 resultad_Canasta_Basica_TIC_2023/Costos terminales/
+analisis_Canasta_Basica_TIC_2023/
